docs: create swagger for payment method endpoint
