# docs/swagger.yaml
@@ -17,6 +17,13 @@ definitions:
     - email
     - password
     type: object
+  dto.CreatePaymentMethodRequest:
+    properties:
+      paymentName:
+        type: string
+    required:
+    - paymentName
+    type: object
   dto.CreateTransactionRequest:
     properties:
       cinema:
@@ -456,6 +463,89 @@ paths:
       summary: Update a movie
       tags:
       - Movies
+  /admin/payment-method:
+    get:
+      description: Retrieve all payment method
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Get all payment method
+      tags:
+      - Payment Method
+    post:
+      consumes:
+      - application/json
+      description: Admin only. Add new payment method
+      parameters:
+      - description: Payment method name
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreatePaymentMethodRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Create payment method
+      tags:
+      - Payment Method
+  /admin/payment-method/{id}:
+    delete:
+      description: Admin only. Delete a payment method by ID
+      parameters:
+      - description: Payment Method ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Delete a payment method
+      tags:
+      - Payment Method
   /forgot-password:
     post:
       consumes:
