# models/payment_method.go
@@ -3,6 +3,8 @@ package models
 import (
 	"be-tickitz/utils"
 	"context"
+
+	"github.com/jackc/pgx/v5"
 )
 
 type PaymentMethod struct {
@@ -28,4 +30,32 @@ func CreatePaymentMethod(paymentName string) (PaymentMethod, error) {
 	)
 
 	return method, err
+}
+
+func GetAllPaymentMethod() ([]PaymentMethod, error) {
+	conn, err := utils.ConnectDB()
+	if err != nil {
+		return nil, err
+	}
+	defer conn.Release()
+
+	rows, err := conn.Query(context.Background(), `
+    SELECT id, payment_name FROM payment_method ORDER BY payment_name ASC
+  `)
+	if err != nil {
+		return nil, err
+	}
+
+	return pgx.CollectRows(rows, pgx.RowToStructByName[PaymentMethod])
+}
+
+func DeletePaymentMethod(id string) error {
+	conn, err := utils.ConnectDB()
+	if err != nil {
+		return err
+	}
+	defer conn.Release()
+
+	_, err = conn.Exec(context.Background(), `DELETE FROM payment_method WHERE id = $1`, id)
+	return err
 }
